bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:3: error: type mismatch;
 found   : Unit
 required: Boolean
  res = a < 0 || b < 0 && !(a < 0 && b < 0)
      ^